# broken-matrix

./: README.md  build  setup.cfg
src/bmatrix/: __main__.py  geometry.py  geometry_test.py  main.py  particle.py  stage.py
