[metadata]
version = 0.0.10
name = broken-matrix
author = yell0w4x
author_email = yell0w4x@gmail.com
description = Broken matrix
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yell0w4x/broken-matrix
project_urls =
    Bug Tracker = https://github.com/yell0w4x/broken-matrix/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license = MIT
keywords = matrix terminal


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8.1
install_requires = 
    blessed==1.20.0
    six==1.16.0
    wcwidth==0.2.13

[options.packages.find]
where = src


[options.entry_points]
console_scripts = 
    bmatrix = bmatrix.main:main

